Part 2 of fix for  Bug 305241 -  [Intro] Overlapped text and tab image corruption in RTL Intro pages (Fixes Scrollbars)

--- a/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
@@ -74,6 +74,18 @@ table {
     padding-right : 45px;
 }
 
+#navigation-links a {
+  float:right;
+  margin-left:auto;
+  margin-left : 10px;
+}
+
+#action-links a {
+    float:left;
+    margin-left:20px;
+    margin-right : auto;
+}
+
 div div#rss-news {  
    position:static;
    margin-left:0px;
